Fix pillbutton on small desktop

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,7 +52,7 @@ h2 {
 
 p {
   font-family: var(--font-poppins);
-  font-size: 18px;
+  font-size: 16px;
   line-height: 1.5;
   margin-bottom: 1rem;
 }
@@ -75,6 +75,10 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+}
+
+main {
+  margin-top: auto;
 }
 
 * {
@@ -107,12 +111,6 @@ a {
     color: var(--accent);
     background-size: 0 3px, 100% 3px;
   }
-}
-
-p {
-  font-size: 18px;
-  line-height: 1.5;
-  margin-bottom: 1rem;
 }
 
 /* Swiper Styles */
